Bug 996677 - Incorrect call DeviceRotationRate() ctor from another one. r=VYV03354